# multi-agent-scene-simulator

./: .env.example  .gitignore  CLAUDE.md  README.md  execution_context.json  install-exif.sh  pyproject.toml
src/multi_agent_scene_simulator/: __init__.py  cli.py  config.py
src/multi_agent_scene_simulator/agentic/: assessor.py  mcp_client.py  schemas.py
src/multi_agent_scene_simulator/agentic/agents/: blender_code_generator.py  lead_agent.py  scene_evaluator.py
src/multi_agent_scene_simulator/services/: context_manager.py  environment_probe.py  executor.py  failure_analyzer.py  scene_parser.py
