[project]
name = "multi-agent-scene-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "dspy>=3.0.1",
    "fastmcp>=2.11.3",
    "mlflow[dspy]>=3.2.0",
]

[project.scripts]
multi-agent-scene-simulator = "multi_agent_scene_simulator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
